--- a/tramitesGenerico.css
+++ b/tramitesGenerico.css
@@ -58,6 +58,24 @@ button{
     cursor: pointer;
 
 }
+
+@media(max-width:447px){
+    .ingresar{
+    width: 80px;
+    height: 60px;
+    display: inline-block;
+    margin-right: 10px;
+    border: 2px solid #333;
+    border-radius: 8px;
+    text-align: center;
+    background-color: transparent;
+    cursor: pointer;
+    }
+    button{
+        font-size: small;
+    }
+}
+
 .ingresar:hover{
     width: 190px;
     height: 60px;
@@ -91,9 +109,6 @@ a {
     flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
     align-items: center;
     width: 100%;
-    height: 150px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .contenedorTituloParrafo{
@@ -103,9 +118,9 @@ a {
     flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
     justify-content: center;
     width: 70%;
-    height: 110px;
     background-color: transparent;
     margin-top: 20px; 
+    margin-bottom: 30px;
     justify-content: center;
     text-align: center;
     align-content: flex-start;
@@ -137,20 +152,7 @@ a {
     height: 350px;
 }
 
-@media(max-width:1223px){
-    .tramitesYServicios{
-         height: 900px;
-    }
-    .ingresar{
-        width: 120px;
-        font-size: 15px;
-    }
 
-    .ingresar:hover{
-        width: 120px;
-        font-size: 15px;
-    }
-}
 
 .tramitesYServicios h2{
     margin-top: 20px;
