--- a/tramitesGenerico.css
+++ b/tramitesGenerico.css
@@ -230,9 +230,7 @@ a {
 
 
 .textoBoton p{
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 10px;
     text-align: justify;
     font-size: 18px;
     color: #black;
