--- a/main.css
+++ b/main.css
@@ -188,7 +188,7 @@ a {
 
 @media(max-width:1223px){
     .tramitesYServicios{
-         min-height: 750px;
+         min-height: 870px;
     }
     .ingresar{
         width: 120px;
@@ -265,6 +265,7 @@ a {
     width: 75%;
     height: 100%;
     background-color: transparent;
+    margin-bottom:10px;
 }
 
 .textoBoton h3{
