--- a/ordenanzas.css
+++ b/ordenanzas.css
@@ -165,8 +165,8 @@ a {
     .ingresar{
     display: inline-block;
     margin-right: 0px;
-   
-
+    width: 120px;
+    font-size: 20px;
 
     }
 
@@ -175,128 +175,50 @@ a {
         font-size: 15px;
     }
 
-
 }
-
-/* FIN EDICION HEADER Y CARRUSEL */
-.tramitesYServicios{
-    background-color: white;
+.contenedorPrincipal{
+    background-color: #f6f6f6;
     display: flex;
     flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
     align-items: center;
     width: 100%;
-    min-height: 560px;
 }
 
-@media(max-width:1223px){
-    .tramitesYServicios{
-    }
-    .ingresar{
-        width: 120px;
-        font-size: 15px;
-    }
-
-    .ingresar:hover{
-        width: 120px;
-        font-size: 15px;
-    }
-}
-
-.tramitesYServicios h2{
-    margin-top: 20px;
-    text-align: center;
-    color: #black;
-    
-}
-
-.botonesTramites{
+.contenedorTituloParrafo{
+    align-content: center;
+    flex-direction: column;
     display: flex;
     flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
     justify-content: center;
-    width: 85%;
+    width: 70%;
     background-color: transparent;
     margin-top: 20px; 
-    text-align: center;
+    margin-bottom: 30px;
+    justify-content: center;
     align-content: flex-start;
+    align-items: flex-start;
 }
 
-.botonTramite {
-    width: 500px; /* Ajusta el ancho de tus botones según sea necesario */
-    
-    margin: 10px; /* Ajusta el margen entre los botones según sea necesario */
-    background-color: transparent; /* Ajusta el color de fondo según sea necesario */
-    border: 6px solid #c3c3c3;
-    border-radius: 8px;
-    display: flex;
-    text-align: center;
-
+.contenedorTituloParrafo a{
+    color: #692e89;
+    text-decoration: underline;
+    text-decoration-color: #692e89;
 }
 
-.botonTramite:hover{
-    border-width: 6px;
-    border-style: solid;
-    border-image: linear-gradient(to right, #692e89, #e12a48, #fbbe01); /* Gradiente de tres colores */
-    border-image-slice: 1; /* Esto ajusta la división del gradiente */
-    border-radius: 8px;
-    color:#692e89 ;
-    .imagenBotonTramite img{
-        transform: scale(1.1);
-        transition: transform 0.8s ease;
-    }
-    .textoBoton h3{
-        text-decoration: underline;
-    }
-
-
+.contenedorTituloParrafo h2{
+    font-size: 40px;
+    margin-top: 20px;
 }
 
-.imagenBotonTramite{
-    width: 25%;
-    height: 100%;
-    background-color: transparent;
-    
-}
-
-.imagenBotonTramite img{
-    width: 100%;
-}
-
-.textoBoton{
-    width: 75%;
-    height: 100%;
-    background-color: transparent;
-    margin-bottom:10px;
-}
-
-.textoBoton h3{
-    margin-top: 10px;
-    margin-left: 10px;
-    text-align: left;
-    font-size: 22px;
-    color: #black;
+.contenedorTituloParrafo p{
+    font-size: 20px;
 }
 
 
-.textoBoton p{
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: justify;
-    font-size: 18px;
-    color: #black;
-    font-weight: 300;
-}
 
-@media(max-width:652px){
-    .botonTramite{
-        width: -webkit-fill-available;
-    }
-}
 
-/* FIN BOTONERA PRINCIPAL DE SERVICIOS¨*/
-
-.areasDeGobierno{
-    background-color: #f6f6f6;
+.OrdenanzasDeGobierno{
+    background-color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -304,22 +226,21 @@ a {
 }
 
 @media(max-width:1130px){
-    .areasDeGobierno{
+    .OrdenanzasDeGobierno{
     }
 }
 @media(max-width:753px){
-    .areasDeGobierno{
+    .OrdenanzasDeGobierno{
     }
 }
 
-.areasDeGobierno h2{
+.OrdenanzasDeGobierno h2{
     margin-top: 20px;
     text-align: center;
 
 }
 
-.botonesAreas{
-    display: flex;
+.botonesOrdenanzas{
     flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
     justify-content: center;
     width: 85%;
@@ -327,11 +248,12 @@ a {
     margin-top: 20px; 
     text-align: center;
     align-content: flex-start;
+    margin-bottom: 20px;
 }
 
-.botonAreaGobierno {
+.botonOrdenanza {
     justify-content: center;
-    width: 300px; /* Ajusta el ancho de tus botones según sea necesario */
+    width: 100%; /* Ajusta el ancho de tus botones según sea necesario */
     min-height: 50px;
     margin: 10px; /* Ajusta el margen entre los botones según sea necesario */
     background-color: transparent; /* Ajusta el color de fondo según sea necesario */
@@ -344,7 +266,7 @@ a {
     border: 3px solid #c3c3c3;
 }
 
-.botonAreaGobierno:hover{
+.botonOrdenanza:hover{
     border: 3px solid; /* Especifica el ancho y tipo de borde */
     border-image: linear-gradient(to right, #692e89, #e12a48, #fbbe01); /* Define el gradiente de colores */
     border-image-slice: 1; /* Ajusta la división del borde */
@@ -360,122 +282,6 @@ a {
     background-color: white;
     text-align: center;
 }
-
-/*PORTAL DE COMUNICACIONES*/
-
-
-.portalDeComunicacion{
-    height: 430px;
-    background-color: #white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-@media(max-width:1365px){
-    .portalDeComunicacion{
-        height: 700px;
-    }
-}
-@media(max-width:685px){
-    .portalDeComunicacion{
-        height: 1290px;
-    }
-}
-
-.portalDeComunicacion h2{
-    margin-top: 20px;
-    text-align: center;
-
-}
-
-.noticias{
-    display: flex;
-    flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
-    justify-content: center;
-    width: 85%;
-    min-height: 290px;
-    background-color: transparent;
-    margin-top: 20px; 
-    text-align: center;
-    align-content: flex-start;
-}
-
-.noticia {
-    justify-content: center;
-    width: 270px; /* Ajusta el ancho de tus botones según sea necesario */
-    min-height: 270px;
-    margin: 10px; /* Ajusta el margen entre los botones según sea necesario */
-    background-color: white; /* Ajusta el color de fondo según sea necesario */
-    /*border: 2px solid #c3c3c3;
-    border-radius: 8px;*/
-    display: grid;
-    text-align: center;
-    place-items: center;
-    border: 3px solid #c3c3c3;
-    border-radius: 15px;
-}
-
-.noticia:hover {
-    border: 3px solid #692e89;
-    border-radius: 15px;
-    text-decoration: underline;
-    text-decoration-color: #692e89;
-    color: #692e89;
-}
-
-.marcoDeFoto{
-    width: 250px;
-    height: 150px;
-    background-color: black;
-    border-radius: 15px;
-}
-
-.marcoDeFoto img{
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-
-}
-
-.textoNoticia{
-    width: 250px;
-    height: 100px;
-    background-color: transparent;
-    text-align: center;
-    font-weight: bold;
-
-}
-
-
-.contenedorBotonVerMas{
-    display: flex;
-    flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
-    justify-content: center;
-    width: 85%;
-    min-height: 60px;
-    background-color: transparent;
-    text-align: center;
-    align-content: center;
-
-}
-
-.botonVerMas {
-    justify-content: center;
-    width: 200px; /* Ajusta el ancho de tus botones según sea necesario */
-    min-height: 50px;
-    background-color: transparent; /* Ajusta el color de fondo según sea necesario */
-    /*border: 2px solid #c3c3c3;
-    border-radius: 8px;*/
-    display: grid;
-    text-align: center;
-    place-items: center;
-    border: 3px solid #c3c3c3;
-    border-radius: 15px;
-}
-
-/*FIN PORTAL NOTICIAS*/
-
 .pie{
     height: 250px;
     background-color: #dcdcdc;
