--- a/tramiteEspecifico.css
+++ b/tramiteEspecifico.css
@@ -154,6 +154,7 @@ a {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 .contenedorTituloParrafoRequisito{
     align-content: center;
