--- a/noticiaIndividual.css
+++ b/noticiaIndividual.css
@@ -58,25 +58,8 @@ button{
     cursor: pointer;
 
 }
-
-@media(max-width:447px){
-    .ingresar{
-    width: 80px;
-    height: 60px;
-    display: inline-block;
-    margin-right: 10px;
-    border: 2px solid #333;
-    border-radius: 8px;
-    text-align: center;
-    background-color: transparent;
-    cursor: pointer;
-    }
-    button{
-        font-size: small;
-    }
-}
-
 .ingresar:hover{
+    width: 190px;
     height: 60px;
     display: inline-block;
     
@@ -88,11 +71,9 @@ button{
 }
 
 a {
-    text-decoration: none;
-    color: #333; 
+    text-decoration: none; /* Quita el subrayado */
+    color: #333; /* Cambia el color del texto del enlace */
 }
-
-
 
 .barradivisora{
     height: 5px;
@@ -100,14 +81,120 @@ a {
     display: block;
 }
 
-/* FIN HEADER */
 
+
+/*CARRUSEL PRINCIPAL */
+
+.carruselPrincipal {
+    margin: 0;
+}
+
+
+
+.titulo{
+    text-align: center;
+    font-size: 40px;
+    padding-top: 50px;
+}
+
+
+.slider-box{
+    display: block;
+    width: 100%;
+    height: auto;
+    margin: 0px auto 0;
+    overflow: hidden;
+}
+
+.slider-box ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+    margin: 0px;
+    animation: slide 20s infinite alternate ease-in-out;
+}
+
+.slider-box li{
+    width: 100%;
+    list-style: none;
+    position: relative;
+}
+
+.slider-box img{
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes slide{
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
+}
+
+@media (max-width:991px){
+    .slider-box{
+        width: 100%;
+    }
+}
+
+@media (max-width:400px){
+    header{
+        
+        align-items: normal;
+    }
+    .containerHeader{
+    background-color: white;
+    display: flex;
+    width: 15%;
+    height: 100%;
+    margin-left: 2%;
+
+    }
+    .containerHeader img{
+    height: 97%;
+    }
+
+    .ingresar{
+    display: inline-block;
+    margin-right: 0px;
+   
+
+    }
+
+    .ingresar:hover{
+        width: 120px;
+        font-size: 15px;
+    }
+
+
+}
+
+@media (max-width: 1223px){
+    .ingresar {
+    width: 120px;
+    font-size: 15px;
+}
+}
+
+
+/* fin carrusel */
 .contenedorPrincipal{
     background-color: #f6f6f6;
     display: flex;
     flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
     align-items: center;
     width: 100%;
+    min-height: 160px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .contenedorTituloParrafo{
@@ -119,10 +206,10 @@ a {
     width: 70%;
     background-color: transparent;
     margin-top: 20px; 
-    margin-bottom: 30px;
     justify-content: center;
     align-content: flex-start;
     align-items: flex-start;
+    margin-bottom: 10px;
 }
 
 .contenedorTituloParrafo a{
@@ -141,109 +228,53 @@ a {
 }
 
 /* FIN PRIMER DE TITULO */
-.tramitesYServicios{
-    background-color: white;
+
+
+.contenedorRequisitos{
+    background-color: #white;
     display: flex;
     flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
     align-items: center;
     width: 100%;
-    height: 350px;
+    min-height: 190px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
-
-
-
-.tramitesYServicios h2{
-    margin-top: 20px;
-    text-align: center;
-    color: #black;
-    
-}
-
-.botonesTramites{
+.contenedorTituloParrafoRequisito{
+    align-content: center;
     display: flex;
     flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
     justify-content: center;
-    width: 85%;
-    height: 400px;
-    background-color: transparent;
-    margin-top: 20px; 
-    text-align: center;
-    align-content: flex-start;
-}
-
-.botonTramite {
-    width: 400px; /* Ajusta el ancho de tus botones según sea necesario */
-    
-    margin: 10px; /* Ajusta el margen entre los botones según sea necesario */
-    background-color: transparent; /* Ajusta el color de fondo según sea necesario */
-    border: 6px solid #c3c3c3;
-    border-radius: 8px;
-    display: flex;
-    text-align: center;
+    width: 70%;
+    background-color: transparent; 
+    justify-content: center;
     align-items: center;
-
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+.contenedorTituloParrafoRequisito a{
+    color: #692e89;
+    text-decoration: underline;
+    text-decoration-color: #692e89;
 }
 
-.botonTramite:hover{
-    border-width: 6px;
-    border-style: solid;
-    border-image: linear-gradient(to right, #692e89, #e12a48, #fbbe01); /* Gradiente de tres colores */
-    border-image-slice: 1; /* Esto ajusta la división del gradiente */
-    border-radius: 8px;
-    color:#692e89 ;
-    .imagenBotonTramite img{
-        transform: scale(1.1);
-        transition: transform 0.8s ease;
-    }
-    .textoBoton h3{
-        text-decoration: underline;
-    }
-
-
+.contenedorTituloParrafoRequisito h2{
+    font-size: 40px;
 }
 
-.imagenBotonTramite{
-    width: 25%;
-    height: 100%;
-    background-color: transparent;
-    
+.contenedorTituloParrafoRequisito p{
+    font-size: 20px;
+    margin-top: 10px;
 }
-
-.imagenBotonTramite img{
-    width: 100%;
-}
-
-.textoBoton{
-    width: 75%;
-    height: 100%;
-    background-color: transparent;
-}
-
-.textoBoton h3{
-    text-align: left;
-    font-size: 22px;
-    color: #black;
-
-}
+/*FIN CONTENEDOR REQUISITOS*/
 
 
 
-.textoBoton p{
-    margin: 10px;
-    text-align: justify;
-    font-size: 18px;
-    color: #black;
-    font-weight: 100;
 
-}
+/* FIN EDICION HEADER Y CARRUSEL */
 
-@media(max-width:652px){
-    .botonTramite{
-        width: -webkit-fill-available;
-    }
-}
-
-/*FIN SECCION DE BOTONES*/
 
 .pie{
     height: 250px;
