--- a/noticias.css
+++ b/noticias.css
@@ -58,25 +58,8 @@ button{
     cursor: pointer;
 
 }
-
-@media(max-width:447px){
-    .ingresar{
-    width: 80px;
-    height: 60px;
-    display: inline-block;
-    margin-right: 10px;
-    border: 2px solid #333;
-    border-radius: 8px;
-    text-align: center;
-    background-color: transparent;
-    cursor: pointer;
-    }
-    button{
-        font-size: small;
-    }
-}
-
 .ingresar:hover{
+    width: 190px;
     height: 60px;
     display: inline-block;
     
@@ -88,162 +71,143 @@ button{
 }
 
 a {
-    text-decoration: none;
-    color: #333; 
+    text-decoration: none; /* Quita el subrayado */
+    color: #333; /* Cambia el color del texto del enlace */
 }
-
-
 
 .barradivisora{
     height: 5px;
     background: linear-gradient(to right, #692e89 0%, #692e89 33%, #e12a48 33%, #e12a48 66%, #fbbe01 66%, #fbbe01 100%);
     display: block;
 }
-
-/* FIN HEADER */
-
-.contenedorPrincipal{
-    background-color: #f6f6f6;
-    display: flex;
-    flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
-    align-items: center;
-    width: 100%;
+@media (max-width: 1223px)
+.ingresar {
+    width: 120px;
+    font-size: 15px;
 }
 
-.contenedorTituloParrafo{
-    align-content: center;
+/*PORTAL DE COMUNICACIONES*/
+
+
+.portalDeComunicacion{
+    background-color: #white;
+    display: flex;
+    align-items: center;
     flex-direction: column;
-    display: flex;
-    flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
-    justify-content: center;
-    width: 70%;
-    background-color: transparent;
-    margin-top: 20px; 
-    margin-bottom: 30px;
-    justify-content: center;
-    align-content: flex-start;
-    align-items: flex-start;
 }
 
-.contenedorTituloParrafo a{
-    color: #692e89;
-    text-decoration: underline;
-    text-decoration-color: #692e89;
+@media(max-width:1365px){
+    .portalDeComunicacion{
+        height: 700px;
+    }
+}
+@media(max-width:685px){
+    .portalDeComunicacion{
+        height: 1290px;
+    }
 }
 
-.contenedorTituloParrafo h2{
-    font-size: 40px;
-    margin-top: 20px;
-}
-
-.contenedorTituloParrafo p{
-    font-size: 20px;
-}
-
-/* FIN PRIMER DE TITULO */
-.tramitesYServicios{
-    background-color: white;
-    display: flex;
-    flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
-    align-items: center;
-    width: 100%;
-    height: 350px;
-}
-
-
-
-.tramitesYServicios h2{
+.portalDeComunicacion h2{
     margin-top: 20px;
     text-align: center;
-    color: #black;
-    
+
 }
 
-.botonesTramites{
+.noticias{
     display: flex;
     flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
     justify-content: center;
     width: 85%;
-    height: 400px;
+    min-height: 290px;
     background-color: transparent;
     margin-top: 20px; 
     text-align: center;
     align-content: flex-start;
 }
 
-.botonTramite {
-    width: 400px; /* Ajusta el ancho de tus botones según sea necesario */
-    
+.noticia {
+    justify-content: center;
+    width: 270px; /* Ajusta el ancho de tus botones según sea necesario */
+    min-height: 270px;
     margin: 10px; /* Ajusta el margen entre los botones según sea necesario */
-    background-color: transparent; /* Ajusta el color de fondo según sea necesario */
-    border: 6px solid #c3c3c3;
-    border-radius: 8px;
-    display: flex;
+    background-color: white; /* Ajusta el color de fondo según sea necesario */
+    /*border: 2px solid #c3c3c3;
+    border-radius: 8px;*/
+    display: grid;
     text-align: center;
-    align-items: center;
-
+    place-items: center;
+    border: 3px solid #c3c3c3;
+    border-radius: 15px;
 }
 
-.botonTramite:hover{
-    border-width: 6px;
-    border-style: solid;
-    border-image: linear-gradient(to right, #692e89, #e12a48, #fbbe01); /* Gradiente de tres colores */
-    border-image-slice: 1; /* Esto ajusta la división del gradiente */
-    border-radius: 8px;
-    color:#692e89 ;
-    .imagenBotonTramite img{
-        transform: scale(1.1);
-        transition: transform 0.8s ease;
-    }
-    .textoBoton h3{
-        text-decoration: underline;
-    }
-
-
+.noticia:hover {
+    border: 3px solid #692e89;
+    border-radius: 15px;
+    text-decoration: underline;
+    text-decoration-color: #692e89;
+    color: #692e89;
 }
 
-.imagenBotonTramite{
-    width: 25%;
-    height: 100%;
-    background-color: transparent;
-    
+.marcoDeFoto{
+    width: 250px;
+    height: 150px;
+    background-color: black;
+    border-radius: 15px;
 }
 
-.imagenBotonTramite img{
+.marcoDeFoto img{
     width: 100%;
-}
-
-.textoBoton{
-    width: 75%;
     height: 100%;
+    border-radius: 15px;
+
+}
+
+.textoNoticia{
+    width: 250px;
+    height: 100px;
     background-color: transparent;
-}
-
-.textoBoton h3{
-    text-align: left;
-    font-size: 22px;
-    color: #black;
+    text-align: center;
+    font-weight: bold;
 
 }
 
 
-
-.textoBoton p{
-    margin: 10px;
-    text-align: justify;
-    font-size: 18px;
-    color: #black;
-    font-weight: 100;
+.contenedorBotonVerMas{
+    display: flex;
+    flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
+    justify-content: center;
+    width: 85%;
+    min-height: 60px;
+    background-color: transparent;
+    text-align: center;
+    align-content: center;
 
 }
 
-@media(max-width:652px){
-    .botonTramite{
-        width: -webkit-fill-available;
-    }
+.botonVerMas {
+    justify-content: center;
+    width: 200px; /* Ajusta el ancho de tus botones según sea necesario */
+    min-height: 50px;
+    background-color: transparent; /* Ajusta el color de fondo según sea necesario */
+    /*border: 2px solid #c3c3c3;
+    border-radius: 8px;*/
+    display: grid;
+    text-align: center;
+    place-items: center;
+    border: 3px solid #c3c3c3;
+    border-radius: 15px;
+    margin-bottom: 15px;
 }
 
-/*FIN SECCION DE BOTONES*/
+.botonVerMas:hover{
+    border: 3px solid #692e89;
+    border-radius: 15px;
+    text-decoration: underline;
+    text-decoration-color: #692e89;
+    color: #692e89;
+}
+
+/*FIN PORTAL NOTICIAS*/
 
 .pie{
     height: 250px;
