--- a/personal.css
+++ b/personal.css
@@ -102,6 +102,9 @@ a {
 
 /* FIN HEADER */
 
+
+
+
 .contenedorPrincipal{
     background-color: #f6f6f6;
     display: flex;
@@ -112,7 +115,7 @@ a {
 
 .contenedorTituloParrafo{
     align-content: center;
-    flex-direction: column;
+    flex-direction: row;
     display: flex;
     flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
     justify-content: center;
@@ -123,9 +126,33 @@ a {
     justify-content: center;
     align-content: flex-start;
     align-items: flex-start;
+    min-height: 200px;
 }
 
-.contenedorTituloParrafo a{
+.contenedorFoto{
+    width: 200px;
+    border-radius: 10px;
+}
+
+.contenedorFoto img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.contenedorTexto{
+    width: 80%;
+    min-height: 200px;
+}
+
+.botonInicio{
+    margin-top: 20px;
+    width: 70%;
+    align-content: flex-start;
+    align-items: flex-start;
+}
+
+.botonInicio a{
     color: #692e89;
     text-decoration: underline;
     text-decoration-color: #692e89;
@@ -134,116 +161,23 @@ a {
 .contenedorTituloParrafo h2{
     font-size: 40px;
     margin-top: 20px;
+    margin-left: 20px;
+}
+.contenedorTituloParrafo h3{
+    font-size: 30px;;
+    margin-left: 20px;
+    text-decoration: underline;
+    margin-top: 10px;
 }
 
 .contenedorTituloParrafo p{
     font-size: 20px;
+    margin-left: 20px;
+    margin-top: 10px
 }
 
 /* FIN PRIMER DE TITULO */
-.tramitesYServicios{
-    background-color: white;
-    display: flex;
-    flex-direction: column; /* Cambiado a columna para que los elementos se apilen verticalmente */
-    align-items: center;
-    width: 100%;
-    height: 350px;
-}
 
-
-
-.tramitesYServicios h2{
-    margin-top: 20px;
-    text-align: center;
-    color: #black;
-    
-}
-
-.botonesTramites{
-    display: flex;
-    flex-wrap: wrap; /* Asegura que los botones se apilen verticalmente */
-    justify-content: center;
-    width: 85%;
-    height: 400px;
-    background-color: transparent;
-    margin-top: 20px; 
-    text-align: center;
-    align-content: flex-start;
-}
-
-.botonTramite {
-    width: 400px; /* Ajusta el ancho de tus botones según sea necesario */
-    
-    margin: 10px; /* Ajusta el margen entre los botones según sea necesario */
-    background-color: transparent; /* Ajusta el color de fondo según sea necesario */
-    border: 6px solid #c3c3c3;
-    border-radius: 8px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-
-}
-
-.botonTramite:hover{
-    border-width: 6px;
-    border-style: solid;
-    border-image: linear-gradient(to right, #692e89, #e12a48, #fbbe01); /* Gradiente de tres colores */
-    border-image-slice: 1; /* Esto ajusta la división del gradiente */
-    border-radius: 8px;
-    color:#692e89 ;
-    .imagenBotonTramite img{
-        transform: scale(1.1);
-        transition: transform 0.8s ease;
-    }
-    .textoBoton h3{
-        text-decoration: underline;
-    }
-
-
-}
-
-.imagenBotonTramite{
-    width: 25%;
-    height: 100%;
-    background-color: transparent;
-    
-}
-
-.imagenBotonTramite img{
-    width: 100%;
-}
-
-.textoBoton{
-    width: 75%;
-    height: 100%;
-    background-color: transparent;
-}
-
-.textoBoton h3{
-    text-align: left;
-    font-size: 22px;
-    color: #black;
-
-}
-
-
-
-.textoBoton p{
-    margin: 10px;
-    text-align: justify;
-    font-size: 18px;
-    color: #black;
-    font-weight: 100;
-
-}
-
-@media(max-width:652px){
-    .botonTramite{
-        width: -webkit-fill-available;
-    }
-}
-
-/*FIN SECCION DE BOTONES*/
 
 .pie{
     height: 250px;
